# TP02_AEDII

./: CMakeLists.txt  README.md
src/main/: TAD_arv_AVL.c  TAD_arv_AVL.h  TAD_arv_bin_pesquisa.c  TAD_arv_bin_pesquisa.h  TAD_arv_pacotes.c  TAD_arv_pacotes.h  TAD_vetor.c  TAD_vetor.h  main.c
src/main/questao1/: TAD_arv_bin_pesquisa.c  TAD_arv_bin_pesquisa.h  main.c
